[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnissentry"
version = "0.1.0"
description = "Comprehensive OSINT Tool"
readme = "README.md"
authors = [
    {name = "OmniSentry Team"}
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
omnissentry = "omnissentry.cli:main"

[tool.setuptools]
packages = ["omnissentry", "omnissentry.core"] 